--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="renderer" content="webkit|ie-comp|ie-stand">
+  <meta name="copyright" content="本网站版权归GuiYangYang所有" />
+  <meta name="keywords" content="悦度,悦度空间,网盘,百度网盘,网盘资源,网盘搜索">
+  <meta name="description" content="悦度空间是收集大量资源并免费分享的中文网站。及时收集书籍、影视、游戏等海量资源，让您的网络生活更加快捷丰富。找资源，就来悦度空间。">
   <title>悦度空间</title>
+  <script>
+    /* 百度-统计 */
+// var _hmt = _hmt || [];
+// (function() {
+//   var hm = document.createElement("script");
+//   hm.src = "https://hm.baidu.com/hm.js?92bc9e03967e29df1280f598b5094f11";
+//   var s = document.getElementsByTagName("script")[0]; 
+//   s.parentNode.insertBefore(hm, s);
+// })();
+  </script>
+
 </head>
 
 <body>
